--- a/src/Ui/Website/Pages/Messages.razor
+++ b/src/Ui/Website/Pages/Messages.razor
@@ -10,15 +10,18 @@
 
   <div class="d-flex gap-2">
     <MudTooltip Text="Receive messages">
-      <MudIconButton Icon="@Icons.Filled.Download" OnClick="@(() => { Model.DialogVisible = true; })" ButtonType="ButtonType.Button">Receive messages</MudIconButton>
+      <MudIconButton Icon="@Icons.Filled.Download" OnClick="@(() => { Model.DialogVisible = true; })"
+        ButtonType="ButtonType.Button">Receive messages</MudIconButton>
     </MudTooltip>
 
     <MudTooltip Text="Send message">
-      <MudIconButton Icon="@Icons.Filled.Send" OnClick="@(() => Model.ViewMessageDetails(null, true))" ButtonType="ButtonType.Button">Send message</MudIconButton>
+      <MudIconButton Icon="@Icons.Filled.Send" OnClick="@(() => Model.ViewMessageDetails(null, true))"
+        ButtonType="ButtonType.Button">Send message</MudIconButton>
     </MudTooltip>
 
     <MudTooltip Text="Import messages from file">
-      <MudIconButton Icon="@Icons.Filled.FileUpload" OnClick="@(() => Model.ImportMessagesFromFileAsync(default))" ButtonType="ButtonType.Button">Import messages from file</MudIconButton>
+      <MudIconButton Icon="@Icons.Filled.FileUpload" OnClick="@(() => Model.ImportMessagesFromFileAsync(default))"
+        ButtonType="ButtonType.Button">Import messages from file</MudIconButton>
     </MudTooltip>
   </div>
 
@@ -31,38 +34,45 @@
         Message Id
       </MudTh>
       <MudTh>
-        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.SequenceNumber)">Seq</MudTableSortLabel>
+        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.SequenceNumber)">Seq
+        </MudTableSortLabel>
       </MudTh>
       <MudTh>
         Subject
       </MudTh>
       <MudTh>
-        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.EnqueuedTime)">Enqueue time</MudTableSortLabel>
+        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.EnqueuedTime)">Enqueue time
+        </MudTableSortLabel>
       </MudTh>
       <MudTh>
-        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.ExpiresAt)">Expiration time</MudTableSortLabel>
+        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.ExpiresAt)">Expiration time
+        </MudTableSortLabel>
       </MudTh>
       <MudTh>
-        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.ScheduledEnqueueTime)">Scheduled enqueue time</MudTableSortLabel>
+        <MudTableSortLabel SortBy="new Func<Message, object>(x => x.SystemProperties.ScheduledEnqueueTime)">Scheduled
+          enqueue time</MudTableSortLabel>
       </MudTh>
     </HeaderContent>
     <RowTemplate>
       <MudTd DataLabel="Actions">
         <MudTooltip Text="Requeue">
           <MudIconButton Size="Size.Small"
-                         OnClick="@(() => Model.Requeue(QueueOrTopicName, context.ToSendMessageModel()))"
-                         Icon="@Icons.Material.Outlined.Send"/>
+            OnClick="@(() => Model.Requeue(QueueOrTopicName, context.ToSendMessageModel()))"
+            Icon="@Icons.Material.Outlined.Send" />
         </MudTooltip>
         <MudTooltip Text="View message details">
-          <MudIconButton Size="Size.Small" OnClick="@(() => Model.ViewMessageDetails(context, false))" Icon="@Icons.Material.Outlined.Preview"/>
+          <MudIconButton Size="Size.Small" OnClick="@(() => Model.ViewMessageDetails(context, false))"
+            Icon="@Icons.Material.Outlined.Preview" />
         </MudTooltip>
         <MudTooltip Text="Edit message">
-          <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(() => Model.ViewMessageDetails(context, true))"/>
+          <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit"
+            OnClick="@(() => Model.ViewMessageDetails(context, true))" />
         </MudTooltip>
         @if (Model.IsPeekMode(_formModel))
         {
           <MudTooltip Text="Delete message">
-            <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Delete" OnClick="@(() => Model.Delete(context, _formModel.SubQueue))"/>
+            <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Delete"
+              OnClick="@(() => Model.Delete(context, _formModel.SubQueue))" />
           </MudTooltip>
         }
       </MudTd>
@@ -75,10 +85,11 @@
     </RowTemplate>
     <PagerContent>
       <div class="d-flex">
-        <MudTablePager PageSizeOptions="new[] { 10 }"/>
+        <MudTablePager PageSizeOptions="new[] { 10 }" />
         @if (Model.CanPeekMore(_formModel))
         {
-          <MudButton OnClick="@(() => Model.PeekMore(_formModel, default))" ButtonType="ButtonType.Button">Load more</MudButton>
+          <MudButton OnClick="@(() => Model.PeekMore(_formModel, default))" ButtonType="ButtonType.Button">Load more
+          </MudButton>
         }
       </div>
     </PagerContent>
@@ -95,45 +106,32 @@
     <MudPaper Elevation="3">
       <MudForm @ref="@form" Model="@_formModel" Validation="@(_validator.ValidateValue)" ValidationDelay="0">
         <MudField Variant="Variant.Outlined" Label="Queue type">
-          <MudRadioGroup @bind-SelectedOption="_formModel.SubQueue"
-                         For="@(() => _formModel.SubQueue)">
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="SubQueue.None">
+          <MudRadioGroup @bind-SelectedOption="_formModel.SubQueue" For="@(() => _formModel.SubQueue)">
+            <MudRadio Dense="true" Size="Size.Small" Option="SubQueue.None">
               Active messages
             </MudRadio>
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="SubQueue.DeadLetter">
+            <MudRadio Dense="true" Size="Size.Small" Option="SubQueue.DeadLetter">
               Dead letter
             </MudRadio>
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="SubQueue.TransferDeadLetter">
+            <MudRadio Dense="true" Size="Size.Small" Option="SubQueue.TransferDeadLetter">
               Transfer dead letter
             </MudRadio>
           </MudRadioGroup>
         </MudField>
 
         <MudField Variant="Variant.Outlined" Label="Receive mode">
-          <MudRadioGroup @bind-SelectedOption="_formModel.Mode"
-                         For="@(() => _formModel.Mode)">
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="ReceiveMode.ReceiveAndDelete">
+          <MudRadioGroup @bind-SelectedOption="_formModel.Mode" For="@(() => _formModel.Mode)">
+            <MudRadio Dense="true" Size="Size.Small" Option="ReceiveMode.ReceiveAndDelete">
               Receive and delete
             </MudRadio>
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="ReceiveMode.PeekLock">
+            <MudRadio Dense="true" Size="Size.Small" Option="ReceiveMode.PeekLock">
               Peek lock
             </MudRadio>
           </MudRadioGroup>
         </MudField>
 
         <MudField Variant="Variant.Outlined" Label="Receive type">
-          <MudRadioGroup @bind-SelectedOption="_formModel.Type"
-                         For="@(() => _formModel.Type)">
+          <MudRadioGroup @bind-SelectedOption="_formModel.Type" For="@(() => _formModel.Type)">
 
             @* TODO: fix all receive option
             <MudRadio Dense="true" *@
@@ -141,46 +139,30 @@
             @*           Option="ReceiveType.All"> *@
             @*     @ReceiveType.All *@
             @* </MudRadio> *@
-            <MudRadio Dense="true"
-                      Size="Size.Small"
-                      Option="ReceiveType.ByCount">
+            <MudRadio Dense="true" Size="Size.Small" Option="ReceiveType.ByCount">
               @ReceiveType.ByCount
             </MudRadio>
           </MudRadioGroup>
-          <MudNumericField @bind-Value="_formModel.MessagesCount"
-                           Disabled="@(_formModel.Type == ReceiveType.All)"
-                           For="@(() => _formModel.MessagesCount)"
-                           T="int?"
-                           Class="px-0 ma-0 pa-0 py-0"
-                           Min="1"
-                           Max="250"
-                           Immediate="true"
-                           HelperText="Messages count">
+          <MudNumericField @bind-Value="_formModel.MessagesCount" Disabled="@(_formModel.Type == ReceiveType.All)"
+            For="@(() => _formModel.MessagesCount)" T="int?" Class="px-0 ma-0 pa-0 py-0" Min="1" Max="250"
+            Immediate="true" HelperText="Messages count">
           </MudNumericField>
-          <MudNumericField @bind-Value="_formModel.FromSequenceNumber"
-                           T="long?"
-                           For="@(() => _formModel.FromSequenceNumber)"
-                           Disabled="@(_formModel.Type == ReceiveType.All || _formModel.Mode == ReceiveMode.ReceiveAndDelete)"
-                           Class="px-0 ma-0 pa-0 py-0"
-                           Min="0"
-                           Immediate="true"
-                           HelperText="From sequence number">
+          <MudNumericField @bind-Value="_formModel.FromSequenceNumber" T="long?"
+            For="@(() => _formModel.FromSequenceNumber)"
+            Disabled="@(_formModel.Type == ReceiveType.All || _formModel.Mode == ReceiveMode.ReceiveAndDelete)"
+            Class="px-0 ma-0 pa-0 py-0" Min="0" Immediate="true" HelperText="From sequence number">
           </MudNumericField>
         </MudField>
       </MudForm>
     </MudPaper>
   </DialogContent>
   <DialogActions>
-    <MudButton ButtonType="ButtonType.Reset"
-               Color="Color.Default"
-               OnClick="@(() => { Model.DialogVisible = false; })"
-               Class="px-10">
+    <MudButton ButtonType="ButtonType.Reset" Color="Color.Default" OnClick="@(() => { Model.DialogVisible = false; })"
+      Class="px-10">
       Close
     </MudButton>
-    <MudButton ButtonType="ButtonType.Button"
-               Color="Color.Success"
-               OnClick="@(() => Model.OnSubmitReceiveForm(form, _formModel, default))"
-               Class="px-10">
+    <MudButton ButtonType="ButtonType.Button" Color="Color.Success"
+      OnClick="@(() => Model.OnSubmitReceiveForm(form, _formModel, default))" Class="px-10">
       Receive
     </MudButton>
   </DialogActions>
@@ -199,20 +181,20 @@
   ReceiveMessagesForm _formModel;
   ReceiveMessageFormValidator _validator = new ReceiveMessageFormValidator();
   DialogOptions _dialogOptions = new DialogOptions
-  {
-    CloseOnEscapeKey = true,
-  };
+    {
+      CloseOnEscapeKey = true,
+    };
 
   protected override async Task OnInitializedAsync()
   {
     _formModel = new ReceiveMessagesForm
-    {
-      MessagesCount = 10,
-      Type = ReceiveType.ByCount
-    };
+      {
+        MessagesCount = 10,
+        Type = ReceiveType.ByCount
+      };
 
     Model.Initialize(
-      new CurrentMessagesEntity(ConnectionName, QueueOrTopicName, SubscriptionName));
+    new CurrentMessagesEntity(ConnectionName, QueueOrTopicName, SubscriptionName));
 
     Model.PropertyChanged += (_, _) => StateHasChanged();
   }
