--- a/src/Ui/Website/Pages/Rules.razor
+++ b/src/Ui/Website/Pages/Rules.razor
@@ -7,7 +7,8 @@
 <MudPaper>
     <div class="d-flex gap-2">
         <MudTooltip Text="Create rule">
-            <MudIconButton Icon="@Icons.Filled.Add" OnClick="@(() => Model.ShowCreateRuleForm())" ButtonType="ButtonType.Button">Create rule</MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="@(() => Model.ShowCreateRuleForm())"
+                ButtonType="ButtonType.Button">Create rule</MudIconButton>
         </MudTooltip>
     </div>
 
@@ -29,10 +30,12 @@
         <RowTemplate>
             <MudTd DataLabel="Actions">
                 <MudTooltip Text="Edit rule">
-                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(() => Model.ShowEditRuleForm(context))"/>
+                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit"
+                        OnClick="@(() => Model.ShowEditRuleForm(context))" />
                 </MudTooltip>
                 <MudTooltip Text="Delete rule">
-                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Delete" OnClick="@(() => Model.DeleteRuleAsync(ConnectionName, TopicName, SubscriptionName, context, default))"/>
+                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Delete"
+                        OnClick="@(() => Model.DeleteRuleAsync(ConnectionName, TopicName, SubscriptionName, context, default))" />
                 </MudTooltip>
             </MudTd>
             <MudTd DataLabel="Name">@context.Name</MudTd>
@@ -45,7 +48,8 @@
 <MudDialog @bind-IsVisible="Model.DialogVisible">
     <TitleContent>
         <MudText Typo="Typo.h6">
-            @(Model.Form.OperationType == OperationType.Create ? "Create" : "Edit") rule for subscription @SubscriptionName (@TopicName topic)
+            @(Model.Form.OperationType == OperationType.Create ? "Create" : "Edit") rule for subscription
+            @SubscriptionName (@TopicName topic)
         </MudText>
     </TitleContent>
     <DialogContent>
@@ -53,65 +57,45 @@
             <MudForm @ref="@_form" Model="@Model.Form" Validation="@(_validator.ValidateValue)" ValidationDelay="0">
 
                 <MudField Variant="Variant.Outlined" Label="Name">
-                    <MudTextField @bind-Value="Model.Form.Name"
-                                  For="@(() => Model.Form.Name)"
-                                  Disabled="@(Model.Form.OperationType == OperationType.Update)"
-                                  Class="px-0 ma-0 pa-0 py-0"
-                                  Immediate="true"
-                                  HelperText="Name">
+                    <MudTextField @bind-Value="Model.Form.Name" For="@(() => Model.Form.Name)"
+                        Disabled="@(Model.Form.OperationType == OperationType.Update)" Class="px-0 ma-0 pa-0 py-0"
+                        Immediate="true" HelperText="Name">
                     </MudTextField>
                 </MudField>
 
                 <MudField Variant="Variant.Outlined" Label="Rule type">
-                    <MudRadioGroup @bind-SelectedOption="Model.Form.Type"
-                                   For="@(() => Model.Form.Type)">
-                        <MudRadio Dense="true"
-                                  Size="Size.Small"
-                                  Option="RuleType.TrueFilter">
+                    <MudRadioGroup @bind-Value="Model.Form.Type" For="@(() => Model.Form.Type)">
+                        <MudRadio Dense="true" Size="Size.Small" Value="RuleType.TrueFilter">
                             True rule
                         </MudRadio>
-                        <MudRadio Dense="true"
-                                  Size="Size.Small"
-                                  Option="RuleType.FalseFilter">
+                        <MudRadio Dense="true" Size="Size.Small" Value="RuleType.FalseFilter">
                             False rule
                         </MudRadio>
-                        <MudRadio Dense="true"
-                                  Size="Size.Small"
-                                  Option="RuleType.Sql">
+                        <MudRadio Dense="true" Size="Size.Small" Value="RuleType.Sql">
                             Sql rule
                         </MudRadio>
-                        <MudRadio Dense="true"
-                                  Size="Size.Small"
-                                  Option="RuleType.CorrelationId">
+                        <MudRadio Dense="true" Size="Size.Small" Value="RuleType.CorrelationId">
                             CorrelationId rule
                         </MudRadio>
                     </MudRadioGroup>
                 </MudField>
 
                 <MudField Variant="Variant.Outlined" Label="Filter value">
-                    <MudTextField @bind-Value="Model.Form.Value"
-                                  For="@(() => Model.Form.Value)"
-                                  Lines="5"
-                                  Disabled="@(Model.Form.Type == RuleType.TrueFilter || Model.Form.Type == RuleType.FalseFilter)"
-                                  Class="px-0 ma-0 pa-0 py-0"
-                                  Immediate="true"
-                                  HelperText="Filter value">
+                    <MudTextField @bind-Value="Model.Form.Value" For="@(() => Model.Form.Value)" Lines="5"
+                        Disabled="@(Model.Form.Type == RuleType.TrueFilter || Model.Form.Type == RuleType.FalseFilter)"
+                        Class="px-0 ma-0 pa-0 py-0" Immediate="true" HelperText="Filter value">
                     </MudTextField>
                 </MudField>
             </MudForm>
         </MudPaper>
     </DialogContent>
     <DialogActions>
-        <MudButton ButtonType="ButtonType.Reset"
-                   Color="Color.Default"
-                   OnClick="@(() => { Model.DialogVisible = false; })"
-                   Class="px-10">
+        <MudButton ButtonType="ButtonType.Reset" Color="Color.Default"
+            OnClick="@(() => { Model.DialogVisible = false; })" Class="px-10">
             Close
         </MudButton>
-        <MudButton ButtonType="ButtonType.Button"
-                   Color="Color.Success"
-                   OnClick="@(() => this.OnFormSubmit())"
-                   Class="px-10">
+        <MudButton ButtonType="ButtonType.Button" Color="Color.Success" OnClick="@(() => this.OnFormSubmit())"
+            Class="px-10">
             Submit
         </MudButton>
     </DialogActions>
