--- a/src/Ui/Website/Shared/ConfirmDialog.razor
+++ b/src/Ui/Website/Shared/ConfirmDialog.razor
@@ -10,7 +10,7 @@
 
 @code {
     [CascadingParameter]
-    MudDialogInstance MudDialog { get; set; }
+    IDialogReference MudDialog { get; set; }
 
     [Parameter]
     public string ContentText { get; set; }
