--- a/src/Ui/Website/Shared/TopicNestedMenuItem.razor
+++ b/src/Ui/Website/Shared/TopicNestedMenuItem.razor
@@ -4,7 +4,7 @@
 @if (TopicSubscriptionsModel.Topic.IsFolder)
 {
     <MudTooltip Text=@TopicSubscriptionsModel.Topic.Name Color="Color.Primary" Placement="Placement.Top">
-        <MudNavGroup Icon="@Icons.Filled.Folder" ExpandedChanged="OnTopicExpandChange" Expanded="TopicSubscriptionsModel.TopicExpanded" Title=@TopicSubscriptionsModel.Topic.Name>
+        <MudNavGroup Icon="@Icons.Material.Filled.Folder" ExpandedChanged="OnTopicExpandChange" Expanded="TopicSubscriptionsModel.TopicExpanded" Title=@TopicSubscriptionsModel.Topic.Name>
             @if (TopicSubscriptionsModel.TopicExpanded)
             {
                 @foreach (var model in TopicSubscriptionsModel.ChildrenModels)
@@ -17,13 +17,13 @@
 }
 else
 {
-    <MudNavGroup Icon="@Icons.Filled.Folder" Title=@TopicSubscriptionsModel.Topic.Name>
+    <MudNavGroup Icon="@Icons.Material.Filled.Folder" Title=@TopicSubscriptionsModel.Topic.Name>
         <MudNavLink Match="NavLinkMatch.All"
                     Href=@($"topic/{ConnectionName}/{HttpUtility.UrlEncode(TopicSubscriptionsModel.Topic.FullName)}")
-                    Icon="@Icons.Filled.Topic">
+                    Icon="@Icons.Material.Filled.Topic">
             View topic details
         </MudNavLink>
-        <MudNavGroup Icon="@Icons.Filled.Subscriptions"
+        <MudNavGroup Icon="@Icons.Material.Filled.Subscriptions"
                      Title="Subscriptions"
                      @onclick="@(OnSubscriptionsExpanded)">
 
@@ -35,7 +35,7 @@ else
             {
                 <MudNavLink Match="NavLinkMatch.All"
                             Href=@($"new-subscription/{ConnectionName}/{HttpUtility.UrlEncode(TopicSubscriptionsModel.Topic.FullName)}")
-                            Icon="@Icons.Filled.Add">
+                            Icon="@Icons.Material.Filled.Add">
                     Create new subscription
                 </MudNavLink>
 
@@ -43,7 +43,7 @@ else
                 {
                     <MudNavLink Match="NavLinkMatch.All"
                                 Href=@($"subscription/{ConnectionName}/{HttpUtility.UrlEncode(TopicSubscriptionsModel.Topic.FullName)}/{HttpUtility.UrlEncode(subscription.SubscriptionName)}")
-                                Icon="@Icons.Filled.FormatLineSpacing">
+                                Icon="@Icons.Material.Filled.FormatLineSpacing">
                         <MudTooltip Placement="Placement.Right" Text="@($"{subscription.SubscriptionName} (Active messages: {subscription.ActiveMessagesCount}, " + $"Dead letters: {subscription.DeadLetterMessagesCount}, " + $"Transfer messages: {subscription.TransferMessagesCount}")">
                             @subscription.SubscriptionName (@subscription.ActiveMessagesCount,
                             @subscription.DeadLetterMessagesCount,
